fixed bug where question editor was partially behind drawercontent

--- a/server/moodle/mod/livequiz/style.css
+++ b/server/moodle/mod/livequiz/style.css
@@ -11,10 +11,8 @@
     max-height: 80vh;
     overflow-y: auto;
     color: #333;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    
+    transform: translate(12.5%, -50%);
     background: #f5f5f5;
     border: 2px solid #ccc;
     border-radius: 15px;
